<resources>
    <string name="app_name">RADIANT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">  User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="car_type">Car Type</string>
    <string name="car_color">Color</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_id">Car ID</string>
    <string name="services">Services</string>
    <string name="add">ADD</string>
    <string name="add_note">Add Note</string>
    <string name="car_search">Car Search</string>
    <string name="person_name">Person Name :</string>
    <string name="car_type_info">Car Type :</string>
    <string name="car_color_details">Car Color :</string>
    <string name="car_id_details">Car ID :</string>
    <string name="start_time">Start Time :</string>
    <string name="end_time">End Time :</string>
    <string name="add_in_queue">Add In Queue</string>
    <string name="employee_search">Employee Search</string>
    <string name="in_time">In Time :</string>
    <string name="show_photo">     Show Photo</string>
    <string name="business_bark_customer">Business Park Customer</string>
    <string name="team_member">Team Member</string>
    <string name="company_name">Company Name</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="ticket_search">Ticket Search</string>
    <string name="summary_ticket">Summary Ticket</string>
    <string name="about_falcons_soft">About Falcons Soft</string>
    <string name="choose_services">Choose Services</string>
    <string name="open_camera">Open Camera</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="choose_team">Choose Team</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="note">Note</string>
    <string name="check">Check</string>
    <string name="show">show</string>
    <string name="company_number">company Number</string>
    <string name="falcons_setting">Falcons Setting</string>
    <string name="plate_number">  Plate Number</string>
    <string name="car_model">Car Model</string>
    <string name="choose_car_type">Choose Car Type</string>
    <string name="other_type_car">Other Type Car..</string>
    <string name="new_tickets">New Tickets</string>
    <string name="process">Process</string>
    <string name="type">Type</string>
    <string name="model">Model</string>
    <string name="phase_1">Phase 1</string>
    <string name="phase_2">Phase 2</string>
    <string name="start_phase_2">Start Phase 2</string>
    <string name="start_phase_3">Start Phase 3</string>
    <string name="end_ticket">End Ticket</string>
    <string name="start_ticket">Start Ticket</string>
    <string name="phase_3">Phase 3</string>
    <string name="no_data_found">No Data Found</string>
    <string name="normal_customer">Normal Customer</string>
    <string name="entry_time">Entry time</string>
    <string name="phone">Phone:</string>
    <string name="last_visit">Last Visit:</string>
    <string name="number_of_visit">Number of Visit:</string>
    <string name="voucher_number">Voucher Number:</string>
</resources>