<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_splach"
    tools:context=".feature.techincalSetting.presintation.ui.TechnicalSettingFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="Technical Setting"
        android:textColor="@color/message_color_dark"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_companyName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:background="@drawable/et_login"
        android:gravity="center"
        android:hint="@string/name"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:background="@drawable/et_login"
        android:gravity="center"
        android:hint="@string/url"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_companyName" />
    <EditText
        android:id="@+id/et_dll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:background="@drawable/et_login"
        android:gravity="center"
        android:hint="@string/url"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_url" />
    <EditText
        android:id="@+id/et_companyNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:background="@drawable/et_login"
        android:gravity="center"
        android:hint="@string/company_number"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dll" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>