<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_splach"
    tools:context=".feature.addTicket.presintation.ui.AddTicketFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="@id/et_userName"
            app:layout_constraintRight_toLeftOf="@id/et_userName"
            app:layout_constraintTop_toTopOf="@id/et_userName" />

        <EditText

            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/et_login"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_carModel"

            />

        <ImageView
            android:id="@+id/btn_searchCar"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/img_car_search"
            app:layout_constraintBottom_toBottomOf="@id/et_carType"
            app:layout_constraintRight_toLeftOf="@id/et_carType"
            app:layout_constraintTop_toTopOf="@id/et_carType" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_car"
            app:layout_constraintBottom_toBottomOf="@id/et_userName"
            app:layout_constraintRight_toLeftOf="@id/et_carModel"
            app:layout_constraintTop_toTopOf="@id/et_carType" />

        <EditText
            android:id="@+id/et_carModel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/et_login"
            android:hint="@string/car_model"
            android:inputType="text"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/et_carType"
            app:layout_constraintRight_toRightOf="@id/et_carType"
            app:layout_constraintTop_toBottomOf="@id/et_carType"

            />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_car"
            app:layout_constraintBottom_toBottomOf="@id/et_carColor"
            app:layout_constraintRight_toLeftOf="@id/et_carColor"
            app:layout_constraintTop_toTopOf="@id/et_carColor" />

        <EditText

            android:id="@+id/et_carColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/et_login"
            android:hint="@string/car_color"
            android:inputType="text"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/et_userName"
            app:layout_constraintRight_toRightOf="@id/et_userName"
            app:layout_constraintTop_toBottomOf="@id/et_userName"

            />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/et_login"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/et_phoneNumber"
            app:layout_constraintLeft_toLeftOf="@id/et_phoneNumber"
            app:layout_constraintRight_toLeftOf="@id/et_plateNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_plateNumber"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/et_login"
            android:hint="@string/plate_number"
            android:inputType="number"
            android:padding="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@id/et_code"
            app:layout_constraintLeft_toRightOf="@id/et_code"
            app:layout_constraintRight_toLeftOf="@id/btn_check_plateCode"
            app:layout_constraintTop_toTopOf="@id/et_code" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_check_plateCode"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_5sdp"

            android:layout_marginRight="@dimen/_30sdp"
            android:elevation="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/et_plateNumber"
            app:layout_constraintLeft_toRightOf="@id/et_plateNumber"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_plateNumber">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/check"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"

                />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="@id/et_phoneNumber"
            app:layout_constraintRight_toLeftOf="@id/et_phoneNumber"
            app:layout_constraintTop_toTopOf="@id/et_phoneNumber" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/et_login"
            android:hint="@string/phone_number"
            android:inputType="numberSigned"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/et_userName"
            app:layout_constraintRight_toRightOf="@id/et_carType"
            app:layout_constraintTop_toBottomOf="@id/et_code" />

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/btn_check"-->
        <!--            android:layout_width="@dimen/_40sdp"-->
        <!--            android:layout_height="@dimen/_25sdp"-->
        <!--            android:layout_marginLeft="@dimen/_5sdp"-->
        <!--            android:layout_marginRight="@dimen/_10sdp"-->
        <!--            android:elevation="@dimen/_10sdp"-->
        <!--            android:padding="@dimen/_5sdp"-->
        <!--            app:cardBackgroundColor="@color/green"-->
        <!--            app:cardCornerRadius="@dimen/_10sdp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/et_phoneNumber"-->
        <!--            app:layout_constraintLeft_toRightOf="@id/et_phoneNumber"-->
        <!--            app:layout_constraintRight_toRightOf="@id/et_carType"-->
        <!--            app:layout_constraintTop_toTopOf="@id/et_phoneNumber">-->

        <!--            <TextView-->

        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:text="@string/check"-->
        <!--                android:textColor="@color/white"-->
        <!--                android:textSize="@dimen/_10sdp"-->
        <!--                android:textStyle="bold"-->

        <!--                />-->
        <!--        </androidx.cardview.widget.CardView>-->

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_id"
            app:layout_constraintBottom_toBottomOf="@id/et_code"
            app:layout_constraintRight_toLeftOf="@id/et_code"
            app:layout_constraintTop_toTopOf="@id/et_code" />

        <EditText
            android:id="@+id/et_carType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/et_login"
            android:editable="false"
            android:hint="@string/car_type"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:cardCornerRadius="@dimen/_6sdp"
            app:hintTextColor="@color/gray"
            app:layout_constraintRight_toRightOf="@id/et_carType"
            app:layout_constraintTop_toBottomOf="@id/et_phoneNumber"

            />


        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_note"
            app:layout_constraintBottom_toBottomOf="@id/et_note"
            app:layout_constraintRight_toLeftOf="@id/et_note"
            app:layout_constraintTop_toTopOf="@id/et_note" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:background="@drawable/et_login"
            android:hint="@string/add_note"
            android:inputType="text"
            android:padding="@dimen/_6sdp"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/et_userName"
            app:layout_constraintRight_toRightOf="@id/et_userName"
            app:layout_constraintTop_toBottomOf="@id/et_carColor"

            />


        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/et_note"
            app:layout_constraintRight_toRightOf="@id/et_note"
            app:layout_constraintTop_toBottomOf="@id/et_note">

            <RadioButton

                android:id="@+id/rbtn_businessBark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@color/transparent"
                android:gravity="center"
                android:text="@string/business_bark_customer"
                android:textColor="@drawable/radio_button_text_color"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbt_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/normal_customer"
                android:textColor="@drawable/radio_button_text_color"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_service"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_services"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/br_gif"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/br_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>